--- a/first.html
+++ b/first.html
@@ -61,13 +61,14 @@
     }
 
     .btn-submit {
-        background-color: lightgray color: black;
+        background-color: lightgray;
         padding: 10px 20px;
         border: none;
         border-radius: 5px;
         font-size: 15px;
         cursor: pointer;
         transition: background-color 0.3s;
+        color:black;
     }
 
     .btn-submit:hover {
