--- a/Natural.html
+++ b/Natural.html
@@ -347,7 +347,7 @@
         </div>
     </div>
     <div class="block1">
-        <img class="image-1" src="./butterscotch.jpg">
+        <img class="image-1" src="./Banner-02-new.jpg">
     </div>
     <h1 class="name">
         <u>BEST SELLERS</u>
